--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.66.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11",
